numerous minor fixes
