# docs/swagger.json
@@ -94,6 +94,15 @@
                         "description": "Page number",
                         "name": "page",
                         "in": "query"
+                    },
+                    {
+                        "type": "array",
+                        "items": {
+                            "type": "integer"
+                        },
+                        "description": "Order status (Создан 1, В обработке 2, На согласовании 3, На сборке 10, В пути 21, Доставлен 15, Приёмка 20, Принят 22, Завершён 24, Отказ/Не согласован 4)",
+                        "name": "selectedStatuses[]",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -185,6 +194,9 @@
                 },
                 "sum": {
                     "type": "number"
+                },
+                "sum_with_tax": {
+                    "type": "number"
                 }
             }
         },
@@ -224,6 +236,9 @@
                 "sum": {
                     "type": "number"
                 },
+                "sum_with_tax": {
+                    "type": "number"
+                },
                 "tax": {
                     "type": "number"
                 },
@@ -245,6 +260,9 @@
                     }
                 },
                 "sum": {
+                    "type": "number"
+                },
+                "sum_with_tax": {
                     "type": "number"
                 }
             }
